<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ESS_NARADA" Id="{acb3c872-2293-4a8c-8fef-a8447d6df927}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ESS_NARADA EXTENDS FB_ESS_Base
//////////////////
// AMSv1 standard product  
//////////////////
VAR CONSTANT
	// Characteristics of the object (Same for all instances)
	
	
END_VAR

VAR_INPUT PERSISTENT
	// Parameters of the Object (instance specific) 
	ParamTimeBetweenPcsConnect		: TIME := T#2S;		(* (s) Tempo between sending order to second Pcs*)
	
	ParamPSoCEqualize				: REAL := 50;		(* (kW) Additionnal power to equilibrate SoC internally of ESS . *)

	ParamDeviationWarning			: REAL := 30.0;		(* (%) Pourcentage of deviation between Battery temperature sensor before a warning is raised*)

	ParamTransfoWarningProdLimit	: REAL := 0.4 ; 	(* (p.u) Limit production if Transfo warning. *)
	ParamDelayOpenDCBbms			: TIME := T#3S;		(* (s) Delay after inverters opened their DC contactor, to open the battery DC contactor*)
	
	{attribute 'OPC.UA.DA' := '1'} 
	ParamPmax						: REAL := 2500   ; 	(* (kW) MAximum Power value for the whole ESS ( limited by transformer and protection ) *)


	
	// HVAC //
	ParamTemperatureSetpoint		: REAL := 22.0;	(* HVAC initial setpoint temperature . *)
	ParamUPSDischargeMaxTime		: TIME := T#30M ; (* Disconnect BESS if UPS is being discharged for too long. 	*)

	
END_VAR


VAR_INPUT
	
	MesDataExd						: ESS_NARADA;
	
	//Child objects
	AX_PCS 							: ARRAY[1..CstNbPcs_ESS_G] OF FB_PCS_SMA_SCS3450UP;
	AX_Bat							: ARRAY[1..CstNbBAT_Ess_G] OF FB_BAT_NARADA;
	//AX_HVAC							: ARRAY[1..CstNbHvac_ESS_G] OF FB_HVAC_JANA;
	//AX_TempSensor					: ARRAY[1..CstNbTempSensor_ESS_G] OF FB_ANA_IO;
	//AX_HygroSensor					: ARRAY[1..CstNbTempSensor_ESS_G] OF FB_ANA_IO;
	A1_DS_Bat1						: FB_TOR_DS;
	A1_Spd							: FB_TOR_Spd;													// Emergency Stop Synthesis
	A1_SD_Bat1						: FB_TOR_SD ; 
	A1_SD_Bat2						: FB_TOR_SD ; 
	A1_UPS_24V						: FB_UPS_ENERIS ; 							// Synthese des UPS 24V pour alimentation du PLC et des RBMS 
	A1_Transfo						: FB_Transfo_MV;		// Transfo 
	A1_H2_Signal					: FB_TOR_Standard;
	A1_FSS             				:FB_FSS;
	A1_ES_BESS						:FB_TOR_Es;
	A1_ES_PCS						:FB_TOR_Standard;
	A1_BMS_Fault                    :FB_TOR_Standard;
	A1_DC_Switch_PCS                :FB_TOR_Standard;    (* at least one DC switch is opened*)

	IN_MesCouplerState_IO			: UINT ; 				// Coupler State IO
	
	{attribute 'OPC.UA.DA' := '1'} 
	IN_CmdStandby					: BOOL;
	//{attribute 'OPC.UA.DA' := '1'} 
	IN_CmdReset						: BOOL; 
		(*
	//A1_Transfo						: FB_Transfo_MV;
	//A1_Temp_Transfo					: FB_ANA_IO;

	*)
	
	ModbusRTU			: FB_ModbusRTU() ; 
	
	
END_VAR

VAR_OUTPUT          	
		OUT_EmergencyStop_IO		AT %Q*	: BOOL;
		OUT_CmdBuzzer_IO			AT %Q*	: BOOL;
END_VAR


VAR
	// M_AlarmManagement
		R_TRIG_Event					: ARRAY[1..15] OF R_TRIG ;  
		MesComErrorEthercat	 			: BOOL;						//(NA) Communication Error with Ethercat coupler 
		TOF_Ethercat					: TOF ;
		AX_TapVariable 					: ARRAY[1..10] OF  FB_TapVariable ; // Reset management 
	
		BMS1_bReducePower				: BOOL;
		BMS1_bStopOperation				: BOOL;
		BMS2_bReducePower				: BOOL;
		BMS2_bCheckRackWhenAvailable	: BOOL;
		BMS2_bStopOperation				: BOOL;	
		BMS1_bPreventStart				: BOOL;
		BMS2_bPreventStart				: BOOL;
		
		TON_TempAlarm					: TON;
		TON_HygroAlarm					: TON;		
		TON_UPS							: TON ; 
		
		
		AX_AlarmWords					: ARRAY[1..60] OF ST_ValuesAlarms;
		AX_AlarmWords_Null				: ARRAY[1..60] OF ST_ValuesAlarms;
		NumAlarmsActive					: UINT;
		
		
		
	// M_EVALUATE VARIABLES//        
    	

		DataSystemBMS					: ARRAY[1..CstNbBAT_Ess_G] OF BAT_NARADA;
	
		//DataPcs							: ARRAY[1..CstNbPcs_ESS_G] OF PCS;
		TON_CalConnected_PCS1				: TON;		// Tempo 5s to delay integration of PCS in PID regulation
		TON_CalConnected_PCS2			: TON;		// Tempo to delay integration of PCS in PID regulation
        MesSbat_ChargeConnected_PCS2	: REAL;
		MesSBATDischargeConnected_PCS1	: REAL;
		MesSbat_ChargeConnected_PCS1		: REAL;
		MesSBATDischargeConnected_PCS2	: REAL;              	
	// M_WRITESETPOINTS VARIABLES//  	
	    bEquilibrationOnGoing			: BOOL;      
		FB_Ramp_ExitFreq_PCS1			: FB_RAMP ;
		FB_Ramp_ExitFreq_PCS2			: FB_RAMP ;
		MesPRampTarget_PCS1				: REAL;	// Value to be reached at the end of the ramp . 	
		MesPRampTarget_PCS2				: REAL;	// Value to be reached at the end of the ramp .
	//GET/SET PROPERTY MANAGEMENT// 	
	                           	
	// M_INIT VARIABLES // 	        	
	
	// M_STARTSTOP //
		BMS1_TP_TimeToSoftStopBeforeOpenAC	: TP; 
		BMS2_TP_TimeToSoftStopBeforeOpenAC	: TP; 
		TP_TimeBetweenPcsConnect			: TP; 
		TP_BuzzerMaxTime					: TP;
		TP_Reset							: TP;
		
		F_Tap_SoftStopBMS1					: FB_TapVariable ; 
		F_Tap_SoftStopBMS2					: FB_TapVariable ; 		
		F_Tap_StopBMS1						: FB_TapVariable ; 
		F_Tap_StopBMS2						: FB_TapVariable ; 	
		F_Tap_StartBMS1						: FB_TapVariable ; 
		F_Tap_StartBMS2						: FB_TapVariable ; 			
		
		BMS1_Trig_SoftStop					: R_TRIG;		// Trig to soft stop 
		BMS2_Trig_SoftStop					: R_TRIG;		// Trig to soft stop 
		BMS1_Trig_StopOperation				: R_TRIG;		// Trig to stop operation on BAT fault
		BMS2_Trig_StopOperation				: R_TRIG;		// Trig to stop operation on BAT fault
		BMS1_Trig_Stop						: R_TRIG;		// Trig to stop 
		BMS2_Trig_Stop						: R_TRIG;		// Trig to stop 
		BMS1_Trig_Start						: R_TRIG;		// Trig to stop 
		BMS2_Trig_Start						: R_TRIG;		// Trig to stop 
		
		BMS1_FTrig_SoftStop					: F_TRIG;		// Falling Trig to soft stop 
		BMS2_FTrig_SoftStop					: F_TRIG;		// Falling Trig to soft stop 
		BMS1_FTrig_StopOperation			: F_TRIG;		// Falling Trig to stop operation on BAT fault
		BMS2_FTrig_StopOperation			: F_TRIG;		// Falling Trig to stop operation on BAT fault
		BMS1_FTrig_Stop						: F_TRIG;		// Falling Trig to stop 
		BMS2_FTrig_Stop						: F_TRIG;		// Falling Trig to stop 
		BMS1_FTrig_Start					: R_TRIG;		// Trig to stop 
		BMS2_FTrig_Start					: R_TRIG;		// Trig to stop 
	
	                     
		TRIG_CmdToOpenDc_Sbms1				: R_TRIG;
		TRIG_CmdToOpenDc_Sbms2				: R_TRIG;
		TON_DC_PCS1							: TON;
		TON_DC_PCS2							: TON;
		TRIG_DC_PCS1						: R_TRIG;
		TRIG_DC_PCS2						: R_TRIG;
		
		TON_BeforeOpenDC_Sbms1				: TON;
		TON_BeforeOpenDC_Sbms2				: TON;
		TRIG_TP_Sbms1						: R_TRIG;
		TRIG_TP_Sbms2						: R_TRIG;

		
		TRIG_CmdStandby						: R_TRIG;
		TP_CmdStandby						: TP;			// Pour laisser le temps au pcs de recevoir une commande de zero avant de se deconnecter 
		TP_CmdStandby2						: TP;			// Pour laisser le temps au pcs de recevoir une commande de zero avant de se deconnecter 


		TRIG_CmdConnect						: R_TRIG;
		TRIG_CmdStart			            : R_TRIG;
		TRIG_CmdStop	              	  	: R_TRIG;
		TRIG_CmdReset			            : R_TRIG;

		TRIG_LOCBESS1						: R_TRIG;
		TRIG_LOCBESS2						: R_TRIG;

		TP_Start_BAT						: TP;
		TP_Start_PCS						: TP;
		FTrig_Start_PCS						: F_TRIG;
		TP_StartTime_PCS					: TP;
		SR_StartingSequenceLaunching		: SR;          
		
		TP_Stop_BAT							: TP;
		TP_Stop_PCS							: TP;
		FTrig_Stop_PCS						: F_TRIG;
		
		TP_Standby_PCS						: TP;
		
		FTrigTpBtwnPcs						: F_TRIG;

		//HVAC 
		R_TRIGChangePriority				: R_TRIG;



END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_AlarmManagement" Id="{49eb7a5f-493c-42c3-9179-aea59d2faebe}">
      <Declaration><![CDATA[METHOD M_AlarmManagement
//////////////////
// Generates object alarms and manages resets. 
//////////////////

VAR 
	// Method local variables (reinitialized at each cycle) 
	FB_AlarmCodeManager			: FB_AlarmCodeManager ;


	System1StopOperation			: WORD;
	System2StopOperation			: WORD;
	System1CheckrackWhenAvailable	: WORD;
	System2CheckrackWhenAvailable	: WORD;	
	System1PreventStart				: WORD;
	System2PreventStart				: WORD;		
	
	bDeviationTempAlarm				: BOOL;
	bDeviationHygroAlarm			: BOOL;
	TempMax							: REAL;
	TempMin							: REAL;
	HygroMax						: REAL;
	HygroMin						: REAL;

	MesAlarmTempBat					: UINT;
	KK								: UINT;
	MesAlarmHygroBat				: UINT ;
                            		
	MesAlarmSynthesis				: BOOL;
	MesWarningSynthesis				: BOOL;
	CalSoCHigh: BOOL;
	CalSoCLow: BOOL;
	
	
	GG: INT ; 
	LL: INT;
	ID_Journal: INT;
	WordTest: WORD;
	
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[

FB_AlarmCodeManager
(
	bAlarm1 := FALSE, 														
	bAlarm2 := FALSE, 																
	bAlarm3 := MesComErrorEthercat, 									
	bAlarm4 := FALSE,												
	bAlarm5 := FALSE,												
	bAlarm6 := FALSE,												
	bAlarm7 := FALSE,												
	bAlarm8  := BMS1_bStopOperation,																		// BBMS 1 Stop Operation Alarm
	bAlarm9  := BMS2_bStopOperation,																		// BBMS 2 Stop Operation Alarm
	bAlarm10 := BMS1_bPreventStart,																			// BBMS 1 Prevent start alarm
	bAlarm11 := BMS2_bPreventStart,																			// BBMS 2 Prevent Start Alarm
	bAlarm12 := FALSE,										
	bAlarm13 := FALSE,										
	bAlarm14 := FALSE,										
	bAlarm15 := FALSE ,										
	wAlarmCode =>MesDataExd.MesData.mesAlarmCode
);
	
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_EquipmentCalls" Id="{1b08fc6b-7c0e-43e9-8c70-ce214a9bd5d9}">
      <Declaration><![CDATA[METHOD M_EquipmentCalls
//////////////////
// Evaluate AMS characteristics
//////////////////

VAR
	// Method local variables (reinitialized at each cycle) 


	KK: UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[ModbusRTU() ; 

(*FOR KK := 1 TO CstNbHvac_ESS_G DO
	AX_HVAC[KK].M_Execute();
END_FOR*)

FOR KK := 1 TO CstNbBAT_Ess_G DO 
	AX_Bat[KK].M_Execute();
END_FOR

FOR KK := 1 TO CstNbPcs_ESS_G DO 
	
	AX_PCS[KK].IN_SetptCCLBat1 := AX_Bat[1].MesDataExd.MesData.MesCCL;
	AX_PCS[KK].IN_SetptDCLBat1 := AX_Bat[1].MesDataExd.MesData.MesDCL;;

	AX_PCS[KK].M_Execute();
	
END_FOR	

(*FOR KK := 1 TO 4 DO 
	
	AX_TempSensor[KK].M_Execute();
	AX_HygroSensor[KK].M_Execute();
	
END_FOR*)


A1_DS_Bat1.M_Execute();		
A1_Spd.M_Execute();				
A1_FSS.M_Execute();	

A1_SD_Bat1.M_Execute() ;
A1_SD_Bat2.M_Execute() ;
A1_UPS_24V.M_Execute() ; 			


A1_Transfo.M_Execute() ; 
A1_H2_signal.M_Execute() ;
A1_ES_BESS.M_Execute() ;
A1_ES_PCS.M_Execute ();
A1_DC_switch_PCS.M_execute();
A1_BMS_Fault.M_Execute();]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Evaluate" Id="{1af3fd51-ae47-431a-b725-bb001677ecb7}">
      <Declaration><![CDATA[METHOD M_Evaluate
//////////////////
// Evaluate ESSS characteristics : First retrieve the SystemBMS values then update the PCS parameters
//////////////////

VAR
	// Method local variables (reinitialized at each cycle) 



	KK: INT;
	CalConnected_PCS2: BYTE;
	CalConnected_PCS1: BYTE;
	

	

	CBChoose: BOOL;

	ModbusRTU: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[


// MANAGE LOSS OF MODBUS COMMUNICATION 

// Gestion de la puissance minimum et maximum des setpoints

	MesDataExd.MesData.OUT_SetptPMax:=AX_PCS[1].MesDataExd.MesData.OUT_SetptPMax;
	MesDataExd.MesData.OUT_SetptPMin:=AX_PCS[1].MesDataExd.MesData.OUT_SetptPMin;
	
// On temporise au démarrage des PCS , pour être sur qu'ils soient prêt à appliquer la consigne pour la régulation PID

TON_CalConnected_PCS1(IN:=NOT AX_PCS[1].MesDataExd.MesData.MesState.0 AND CBChoose AND NOT AX_PCS[1].IN_CmdPcsInLocalMode , PT:=T#5S ) ; 

CalConnected_PCS1 :=  SEL( TON_CalConnected_PCS1.Q, 0,1);


MesDataExd.Mesdata.MesEconnected	:= AX_Bat[1].MesDataExd.MesData.MesEconnected *CalConnected_PCS1 ;
MesDataExd.Mesdata.MesEnomconnected := ( AX_Bat[1].MesDataExd.MesNbRackConnected * AX_Bat[1].ParamEnomRack * AX_Bat[1].MesDataExd.MesData.MesSoH/100*CalConnected_PCS1);


// Setpoint . Do not consider local setpoint in the calculation
MesDataExd.Mesdata.OUT_SetptP		:= AX_PCS[1].MesDataExd.MesData.OUT_SetptP * SEL(NOT AX_PCS[1].IN_CmdPcsInLocalMode,0,1);
MesDataExd.Mesdata.OUT_SetptQ		:= AX_PCS[1].MesDataExd.MesData.OUT_SetptQ * SEL(NOT AX_PCS[1].IN_CmdPcsInLocalMode,0,1);



MesDataExd.MesData.MesP			:= AX_PCS[1].MesDataExd.MesData.MesP * SEL(NOT AX_PCS[1].IN_CmdPcsInLocalMode,0,1) ;
MesDataExd.MesData.MesQ			:= AX_PCS[1].MesDataExd.MesData.MesQ * SEL(NOT AX_PCS[1].IN_CmdPcsInLocalMode,0,1) ;
MesDataExd.MesData.MesState		:= MesState;

// SubEquipement properties assignment 
(*FOR KK := 1 TO 4 DO 
	MesDataExd.AX_HygroSensor[KK] 	:= AX_HygroSensor[KK].MesDataExd;
	MesDataExd.AX_TempSensor[KK]	:= AX_TempSensor[KK].MesDataExd;
END_FOR*)

FOR KK:= 1 TO CstNbPcs_ESS_G DO 
	MesDataExd.AX_PCS[KK] := AX_PCS[KK].MesDataExd;
END_FOR

FOR KK:= 1 TO CstNbBAT_Ess_G DO 
	MesDataExd.AX_Bat[KK] := 	AX_Bat[KK].MesDataExd;
END_FOR

MesDataExd.MesData.MesHvacOn:=0;

FOR KK := 1 TO CstNbHvac_ESS_G DO
	MesDataExd.MesData.MesHvacOn := MesDataExd.MesData.MesHvacOn + AX_BAT[LL].MesDataExd.AX_HVAC[KK].MesState.1;
END_FOR

MesDataExd.DS_Bat1				 := 	A1_DS_Bat1.MesDataExd; 											
MesDataExd.Spd					 := 	A1_Spd.MesDataExd; 						
MesDataExd.FSS					 := 	A1_FSS.MesDataExd; 										
MesDataExd.SD_Bat1				 := 	A1_SD_Bat1.MesDataExd; 					
MesDataExd.SD_Bat2				 := 	A1_SD_Bat2.MesDataExd; 					
MesDataExd.UPS_24V				 := 	A1_UPS_24V.MesDataExd; 
MesDataExd.Transfo				 :=     A1_Transfo.MesDataExd;					
MesDataExd.H2_signal 			 :=     A1_H2_Signal.MesDataExd;
MesDataExd.ES_BESS 				 := 	A1_ES_BESS.MesDataExd;
MesDataExd.ES_PCS 				 := 	A1_ES_PCS.MesDataExd;
MesDataExd.BMS_Fault 			 := 	A1_BMS_Fault.MesDataExd;
MesDataExd.DC_Switch_PCS		 := 	A1_DC_Switch_PCS.MesDataExd;   			]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Init" Id="{9ad8bd73-c11e-4b94-84fb-32dc49dbd236}">
      <Declaration><![CDATA[METHOD M_Init

VAR
	MesIPAdressCTRLPcs: STRING;
	MesIPAdressCTRLBat: STRING;
	KK: UINT;

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[	FOR KK := 1 TO CstNbBAT_Ess_G DO 
		
		AX_Bat[KK].ParamSystemBmsNum 		:= UINT_TO_BYTE(KK) ; 
		AX_Bat[KK].ParamClockReadTime 		:= T#1S ; 
		AX_Bat[KK].ParamClockWriteTime 		:= T#3S ;
		AX_Bat[KK].ParamEnomRack			:= 290; //old =97.2 	// kWh .  
		AX_Bat[KK].ParamEssNum 				:= ParamEssNum ;
		//AX_Bat[KK].ParamIpAddress			:= CONCAT(STR1:= '10.0.1.' , STR2:= INT_TO_STRING((ParamEssNum-1)*2+103+(KK-1)))  ; 
	
		AX_Bat[KK].ParamTempoComAlarm 		:= T#10S ; 
		AX_Bat[KK].ParamTimeout 			:= T#20s ; 
		AX_Bat[KK].ParamTimeOutStart 		:= T#60S ; 
		AX_Bat[KK].ParamTimeOutStop 		:= T#5S ; 
		AX_Bat[KK].ParamTimeWatchdog 		:= T#30S ; 
		AX_Bat[KK].ParamUnitID 				:= 1 ;
	
	END_FOR


	AX_PCS[1].ParamClockReadTime 			:= T#3S ; 
	AX_PCS[1].ParamClockWriteTime 			:= T#300MS ; 
	AX_PCS[1].ParamTimeout					:= T#4S;
	AX_PCS[1].ParamPoverQ					:= TRUE;
	AX_PCS[1].ParamPcsNum 					:= KK;
	AX_PCS[1].ParamEssNum 					:= ParamEssNum ; 
	AX_PCS[1].IN_CmdPcsInLocalMode 			:= FALSE  ; 
	AX_PCS[1].ParamTcpPort 					:= 502; 
	AX_PCS[1].ParamTempoComAlarm 			:= T#10S ; 
	AX_PCS[1].ParamTempoComWarning 			:= T#5S ; 
	AX_PCS[1].ParamTimeout 					:= T#5S ; 
	AX_PCS[1].ParamUnitID 					:= 1 ;
	AX_PCS[1].ParamIPAddress 				:= '10.0.5.20' ;(* à modifier*)
	AX_PCS[1].ParamPn						:= 2500; //old 3450; apparement faudra changer la limite sur le pcs
	AX_PCS[1].ParamQn						:= 2445;
	AX_PCS[1].ParamSmax						:= 2156.25;
	

	A1_DS_Bat1.ParamNbSensors 				:= 1;
	A1_DS_Bat1.ParamAtleastOne				:= TRUE ; 
	A1_DS_Bat1.ParamCableCutSecurity 		:= FALSE  ; 
	A1_DS_Bat1.ParamTempoDoorAlarm 			:= T#15S ; 
                                        	
	A1_Spd.ParamNbSensors 					:= 1;
	A1_Spd.ParamAtleastOne 					:= TRUE ; 
	A1_Spd.ParamCableCutSecurity 			:= TRUE ; 
	A1_Spd.ParamTempoEs						:= T#5S ; 		
                                        	
	A1_SD_Bat1.ParamNbSensors 				:= 1;
	A1_SD_Bat1.ParamAtleastOne				:= TRUE ; 
	A1_SD_Bat1.ParamCableCutSecurity 		:= FALSE  ; 
                                        	
	A1_SD_Bat2.ParamNbSensors 				:= 1;
	A1_SD_Bat2.ParamAtleastOne				:= TRUE ; 
	A1_SD_Bat2.ParamCableCutSecurity 		:= FALSE  ; 
	                                    	
	A1_UPS_24V.ParamClockReadTime 			:= T#1S ; 
	A1_UPS_24V.ParamTempoComAlarm 			:= T#2S ;
	A1_UPS_24V.ParamTempoComWarning 		:= T#1S ; 
	A1_UPS_24V.ParamTimeOut 				:= T#2S  ; 		
                                        	
	A1_H2_Signal.ParamNbSensors 			:= 1;
	A1_H2_Signal.ParamCableCutSecurity 		:= FALSE;
	A1_H2_Signal.ParamAtleastOne 			:= TRUE ; 	
	                                    	
	A1_FSS.ParamCableCutSecurity 			:= FALSE ; 
	A1_FSS.ParamTempoFire 					:= T#5S ; 
	A1_FSS.ParamWatchdogEnable 				:= FALSE ; 
	                                    	
	A1_ES_BESS.ParamNbSensors 				:= 1;
	A1_ES_BESS.ParamCableCutSecurity 		:= FALSE;
	A1_ES_BESS.ParamAtleastOne 				:= TRUE ; 
	A1_ES_BESS.ParamTempoEs 				:= T#2S;
                                        	
	A1_ES_PCS.ParamNbSensors 				:= 1;
	A1_ES_PCS.ParamCableCutSecurity 		:= FALSE;
	A1_ES_PCS.ParamAtleastOne 				:= TRUE ; 
                                        	
	A1_BMS_Fault.ParamNbSensors 			:= 1;
	A1_BMS_Fault.ParamCableCutSecurity 		:= FALSE;
	A1_BMS_Fault.ParamAtleastOne 			:= TRUE ; 
	
	A1_DC_Switch_PCS.ParamNbSensors 		:= 1;
	A1_DC_Switch_PCS.ParamCableCutSecurity 	:= FALSE;
	A1_DC_Switch_PCS.ParamAtleastOne 		:= TRUE ; ]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_StartStop" Id="{44dce29e-3290-4e7d-9237-9ad1fac9adbd}">
      <Declaration><![CDATA[METHOD M_StartStop
//////////////////
// Start and Stop Management of the AMS (battery and PCS) .
//////////////////
VAR
	// Method local variables (reinitialized at each cycle) 
	KK	: INT;

	TimeHvacPrio1			: TIME;
	TimeHvacPrio2			: TIME;
	NumPrio1 				: INT;
	NumPrio2				: INT;
	



END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// Commandes générales ESS 

	IN_CmdStart := A1_SUBMV.OUT_ESS_CouplingSequence;

	// Synthèse des commandes StandBy / Start / Stop / Reset	
	TRIG_CmdStandby 	(CLK :=IN_CmdStandby); //OR TRIG_LOCBESS1.Q);// OR AX_Bat[1].MesDataExd.MesNbRackLowAlarm); // Go to standby if LOC BBMS AND PCS 
	TRIG_CmdStart 		(CLK :=IN_CmdStart); //AND NOT AX_BAT[1].TON_NbRackLowAlarm.Q); 
	TRIG_CmdStop		(CLK :=IN_CmdStop); //OR AX_BAT[1].TON_NbRackLowAlarm.Q);
	TRIG_CmdReset		(CLK :=IN_CmdReset_IO OR IN_CmdReset);
	
	IF TRIG_CmdStart.Q THEN
		IN_CmdStart := FALSE;
	END_IF
	
	IF TRIG_CmdStop.Q THEN
		IN_CmdStop := FALSE;
	END_IF
	
		
	IF TRIG_CmdStandby.Q THEN
		IN_CmdStandby := FALSE;
	END_IF
	
	IF TRIG_CmdReset.Q THEN
		IN_CmdReset_IO := FALSE;
		IN_CmdReset := FALSE;
		AX_PCS[1].IN_CmdReset := TRUE;
		//AX_Bat[1].IN_CmdReset :=  NOT AX_PCS[1].MesDataExd.MesData.MesState>1 ;		// Do not reset bat while PCS is not stopped . !!! 
	END_IF

// Sequence START 

	// Update StateManager
		SR_StartingSequenceLaunching(SET1 := TP_Start_BAT.Q ,RESET := TP_StartTime_PCS.Q);

	// Temporisation de la séquence 
	
		TP_Start_BAT(IN := TRIG_CmdStart.Q,PT := T#3S);

	// Fermetures des batteries 
	
		IF TP_Start_BAT.Q THEN
			AX_Bat[1].IN_CmdCloseDC := TRUE;
		ELSE
			AX_Bat[1].IN_CmdCloseDC := FALSE;
		END_IF
	
	//Fermeture du PCS
	
		TP_StartTime_PCS(IN:=(AX_ESS[1].AX_Bat[1].MesDataExd.MesStatusConnectionProcess=2),PT:=T#3S);// AND NOT AX_Bat[1].MesDataExd.MesNbRackLowAlarm, PT:=T#3S);
			
		AX_PCS[1].IN_CmdStart := TP_StartTime_PCS.Q; //AND NOT BMS1_bPreventStart AND NOT AX_PCS[1].IN_CmdPcsInLocalMode  ;
		
		
// Sequence STOP

	// Temporisation de la séquence
	TP_Stop_PCS(IN := TRIG_CmdStop.Q,	PT := T#20S);
	TP_Stop_BAT(IN := FTrig_Stop_PCS.Q,	PT := T#3S);

	// Ouverture PCS
	F_Tap_StopBMS1(TapTrigger := TRIG_CmdStop.Q , TapOut:= AX_PCS[1].IN_CmdStop) ; 
	
	// Ouverture Batteries
	FTrig_Stop_PCS(CLK := TP_Stop_PCS.Q);
		
	IF TP_Stop_BAT.Q THEN
		AX_Bat[1].IN_CmdOpenDC := TRUE;
	ELSE
		AX_Bat[1].IN_CmdOpenDC := FALSE;
	END_IF

// Sequence STANDBY	

	// Temporisation de la séquence 
	TP_Standby_PCS(IN := TRIG_CmdStandby.Q,	PT := T#3S);
	
	// Pertes de communication Akuo <> Batteries 
	//TRIG_LOCBESS1(CLK := AX_Bat[1].MesDataExd.MesData.MesComAlarm (*AND AX_PCS[1].MesDataExd.MesData.MesAlarmCom*) );	// Alarm PCS + BBMS . 
	
	
	// Commande StandBy
	AX_PCS[1].IN_CmdStandby := TP_Standby_PCS.Q; //AND NOT BMS1_bPreventStart AND NOT AX_PCS[1].IN_CmdPcsInLocalMode  ;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_StateManager" Id="{b4996c1b-b82c-491e-81e5-ea798d34e4ae}">
      <Declaration><![CDATA[METHOD M_StateManager
//////////////////
// Manages AMS state . 
//////////////////
VAR 
	// Method local variables (reinitialized at each cycle) 
	
	CTRLBatState1: BYTE;
	CTRLBatState2: BYTE;
	CTRLPcsState1: BYTE;
	CTRLPcsState2: BYTE;

	bCalAllAcContactorsOpen_System1		: BOOL;
	bCalAllAcContactorsClose_System1	: BOOL;
	
	bDcBreakerOpen_System1				: BOOL;	
	bDcBreakerOpen_System2				: BOOL;	
	
	bAcBreakerOpen_System1				: BOOL;
	bAcBreakerOpen_System2				: BOOL;
	
	bCalNoRackConnected_System1			: BOOL;
	bCalNoRackConnected_System2			: BOOL;

	
	bCalAllAcContactorsOpen_System2		: BOOL;
	bCalAllAContactorsOpen_System2		: BOOL;	
	
	bCalAtLeastOnPcsConnected_System1: BOOL;
	bCalAtLeastOnPcsConnected_System2: BOOL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[

// OFF : Il y a, pour les deux systèmes : soit le ac breaker ouvert, soit le dc breaker ouvert, soit les racks sont tous ouverts) 				
MesState.0 := (bAcBreakerOpen_System1 OR bDcBreakerOpen_System1 OR bCalNoRackConnected_System1) AND (bAcBreakerOpen_System2 OR bDcBreakerOpen_System2 OR bCalNoRackConnected_System2);

// AVAILABLE : AC et DC sont fermés sur un système, mais tous les ac contacteurs sont ouverts
MesState.1 := ((NOT bAcBreakerOpen_System1 AND NOT bDcBreakerOpen_System1) OR ( NOT bAcBreakerOpen_System2 AND NOT bDcBreakerOpen_System2)) AND ( bCalAllAcContactorsOpen_System1 AND bCalAllAcContactorsOpen_System2 );

// CONNECTED : tous les contacteurs DC sont fermés et tous les AC CB sont fermés sur au moins un systeme et les contacteurs sont fermés sur au moins un système
MesState.2 := (NOT bAcBreakerOpen_System1 AND NOT bDcBreakerOpen_System1 AND bCalAtLeastOnPcsConnected_System1) OR (NOT bAcBreakerOpen_System2 AND NOT bDcBreakerOpen_System2 AND bCalAtLeastOnPcsConnected_System2);

// CLOSING 
MesState.3 := SR_StartingSequenceLaunching.Q1
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_WriteSetpoints" Id="{e6611de2-102a-4866-aa23-7ab8e6c2daa1}">
      <Declaration><![CDATA[METHOD M_WriteSetpoints
//////////////////
// Write P and Q setpoints to PCS controller when AMS in (P,Q) Mode . 
//////////////////
VAR
	// Method local variables (reinitialized at each cycle) 


END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ESS_NARADA">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_AlarmManagement">
      <LineId Id="4404" Count="0" />
      <LineId Id="4581" Count="5" />
      <LineId Id="4605" Count="2" />
      <LineId Id="4602" Count="2" />
      <LineId Id="4593" Count="8" />
      <LineId Id="4462" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_EquipmentCalls">
      <LineId Id="498" Count="1" />
      <LineId Id="423" Count="10" />
      <LineId Id="435" Count="0" />
      <LineId Id="437" Count="1" />
      <LineId Id="526" Count="0" />
      <LineId Id="439" Count="2" />
      <LineId Id="527" Count="0" />
      <LineId Id="442" Count="1" />
      <LineId Id="528" Count="0" />
      <LineId Id="444" Count="5" />
      <LineId Id="484" Count="1" />
      <LineId Id="483" Count="0" />
      <LineId Id="453" Count="0" />
      <LineId Id="512" Count="0" />
      <LineId Id="542" Count="5" />
      <LineId Id="541" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_Evaluate">
      <LineId Id="866" Count="0" />
      <LineId Id="804" Count="2" />
      <LineId Id="981" Count="0" />
      <LineId Id="980" Count="0" />
      <LineId Id="983" Count="0" />
      <LineId Id="982" Count="0" />
      <LineId Id="1027" Count="0" />
      <LineId Id="1005" Count="0" />
      <LineId Id="808" Count="13" />
      <LineId Id="824" Count="4" />
      <LineId Id="830" Count="0" />
      <LineId Id="832" Count="0" />
      <LineId Id="1054" Count="3" />
      <LineId Id="833" Count="0" />
      <LineId Id="838" Count="6" />
      <LineId Id="848" Count="0" />
      <LineId Id="1080" Count="1" />
      <LineId Id="849" Count="3" />
      <LineId Id="917" Count="1" />
      <LineId Id="920" Count="1" />
      <LineId Id="925" Count="2" />
      <LineId Id="1079" Count="0" />
      <LineId Id="1050" Count="3" />
      <LineId Id="1049" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_Init">
      <LineId Id="828" Count="82" />
      <LineId Id="667" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_StartStop">
      <LineId Id="966" Count="0" />
      <LineId Id="974" Count="0" />
      <LineId Id="1241" Count="1" />
      <LineId Id="1195" Count="0" />
      <LineId Id="975" Count="4" />
      <LineId Id="995" Count="3" />
      <LineId Id="1183" Count="0" />
      <LineId Id="999" Count="3" />
      <LineId Id="1184" Count="2" />
      <LineId Id="1003" Count="6" />
      <LineId Id="1011" Count="1" />
      <LineId Id="1096" Count="0" />
      <LineId Id="1238" Count="0" />
      <LineId Id="1237" Count="0" />
      <LineId Id="1239" Count="0" />
      <LineId Id="1236" Count="0" />
      <LineId Id="1129" Count="0" />
      <LineId Id="1233" Count="0" />
      <LineId Id="1015" Count="0" />
      <LineId Id="1132" Count="0" />
      <LineId Id="1128" Count="0" />
      <LineId Id="1231" Count="0" />
      <LineId Id="1016" Count="1" />
      <LineId Id="1134" Count="0" />
      <LineId Id="1137" Count="0" />
      <LineId Id="1021" Count="0" />
      <LineId Id="1120" Count="0" />
      <LineId Id="1133" Count="0" />
      <LineId Id="1232" Count="0" />
      <LineId Id="1213" Count="0" />
      <LineId Id="1124" Count="1" />
      <LineId Id="1240" Count="0" />
      <LineId Id="1126" Count="0" />
      <LineId Id="1023" Count="0" />
      <LineId Id="1150" Count="2" />
      <LineId Id="1167" Count="0" />
      <LineId Id="1153" Count="0" />
      <LineId Id="1146" Count="1" />
      <LineId Id="1154" Count="1" />
      <LineId Id="1157" Count="2" />
      <LineId Id="1162" Count="1" />
      <LineId Id="1166" Count="0" />
      <LineId Id="1156" Count="0" />
      <LineId Id="1172" Count="1" />
      <LineId Id="1194" Count="0" />
      <LineId Id="1193" Count="0" />
      <LineId Id="1192" Count="0" />
      <LineId Id="1140" Count="0" />
      <LineId Id="1179" Count="0" />
      <LineId Id="1178" Count="0" />
      <LineId Id="1176" Count="0" />
      <LineId Id="1191" Count="0" />
      <LineId Id="1190" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_StateManager">
      <LineId Id="299" Count="9" />
      <LineId Id="311" Count="0" />
      <LineId Id="309" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ESS_NARADA.M_WriteSetpoints">
      <LineId Id="484" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>